--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,6 +58,8 @@ $z-fixed-menu:100;
 @import "./components/product-section.scss";
 @import "./components/fullscreen-menu.scss";
 @import "./components/team.scss";
+@import "./components/modal.scss";
+
 
 
 
