--- a/css/main.css
+++ b/css/main.css
@@ -1542,6 +1542,13 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
+}
+.products-slider .bx-wrapper {
+  border: 0;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .slider-container {
@@ -1552,7 +1559,7 @@ img {
   margin: 0 auto;
   position: absolute;
   z-index: 1;
-  top: 50%;
+  top: 40%;
 }
 .product-slider__arrow--direction--prev {
   left: 0;
@@ -1594,6 +1601,7 @@ img {
           align-items: center;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 @media screen and (max-width: 768px) {
   .product__container {
@@ -2097,4 +2105,51 @@ img {
 
 .content__text {
   max-height: 2.4444444444rem;
+}
+
+.modal {
+  background: #313131 !important;
+  display: none;
+}
+.modal.fancybox-content {
+  padding: 0 !important;
+}
+.modal .fancybox-button {
+  display: none;
+}
+
+.modal__container {
+  margin: auto;
+  padding: 1.1111111111rem;
+  background: #fff;
+  color: #000;
+  width: 17.2222222222rem;
+  height: 9.7222222222rem;
+}
+
+.modal__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.modal__content-text {
+  margin-bottom: 1rem;
+}
+
+.modal__content-btn {
+  background: #FEDB3F;
 }
