--- a/scss/components/products.scss
+++ b/scss/components/products.scss
@@ -1,10 +1,10 @@
 
-
 .product__container {
     display: flex;
     align-items: center;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     // padding: 0 0 0 13%;
 
     @include tablets {
