--- a/css/main.css
+++ b/css/main.css
@@ -1282,6 +1282,10 @@ img {
   }
 }
 
+.input-error {
+  border-color: #FEDB3F;
+}
+
 .radio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1928,7 +1932,7 @@ img {
 }
 @media screen and (max-width: 768px) {
   .fullscreen-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -1947,6 +1951,7 @@ img {
         -ms-flex-pack: center;
             justify-content: center;
     color: #fff;
+    z-index: 1000;
   }
 }
 
@@ -2112,6 +2117,9 @@ img {
   background: #313131 !important;
   display: none;
 }
+.modal.error-modal .modal__content-text {
+  color: red;
+}
 .modal.fancybox-content {
   padding: 0 !important;
 }
@@ -2121,11 +2129,11 @@ img {
 
 .modal__container {
   margin: auto;
-  padding: 1.1111111111rem;
+  padding: 1.9444444444rem 3.3333333333rem 1.1111111111rem;
   background: #fff;
   color: #000;
-  width: 17.2222222222rem;
-  height: 9.7222222222rem;
+  width: 100%;
+  height: 100%;
 }
 
 .modal__content {
@@ -2145,10 +2153,12 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   height: 100%;
+  margin-bottom: 1rem;
 }
 
 .modal__content-text {
-  margin-bottom: 1rem;
+  margin-bottom: 1.3888888889rem;
+  white-space: nowrap;
 }
 
 .modal__content-btn {
