--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -23,6 +23,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
     position: relative;
     color: #666;
+
+    &.hidden {
+        overflow: hidden;
+    }
 }
 
 .wrapper {
