--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,7 +59,7 @@ $z-fixed-menu:100;
 @import "./components/fullscreen-menu.scss";
 @import "./components/team.scss";
 @import "./components/modal.scss";
-@import "./components/player.scss";
+@import "./components/video-section.scss";
 
 
 
