--- a/scss/components/map-section.scss
+++ b/scss/components/map-section.scss
@@ -1,3 +1,7 @@
-.map-section {
-    background: url("../images/bg/map.png") center center / cover no-repeat;
+// .map-section {
+//     background: url("../images/bg/map.png") center center / cover no-repeat;
+// }
+.map {
+    width: 100%;
+    height: 100%;
 }
