--- a/scss/components/map-section.scss
+++ b/scss/components/map-section.scss
@@ -1,6 +1,7 @@
-// .map-section {
-//     background: url("../images/bg/map.png") center center / cover no-repeat;
-// }
+.map-section {
+    position: relative;
+}
+
 .map {
     width: 100%;
     height: 100%;
