--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,15 @@ h6 {
   font-weight: normal;
 }
 
+.maincontent {
+  height: 100%;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+  will-change: transform;
+}
+
 table {
   border-collapse: collapse;
 }
@@ -1409,6 +1418,10 @@ img {
   border-radius: 0.5555555556rem;
 }
 
+.map-section {
+  position: relative;
+}
+
 .map {
   width: 100%;
   height: 100%;
@@ -2399,4 +2412,134 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.products-menu-section {
+  background: url("../images/menu/products-bg.jpg") center center/cover no-repeat;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow: hidden;
+}
+
+.products-menu-section__title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #fff;
+  width: 20%;
+  margin: 6.1111111111rem 0 0 4.7222222222rem;
+}
+@media screen and (max-width: 768px) {
+  .products-menu-section__title {
+    margin: 11rem 0 0 1.5555555556rem;
+  }
+}
+
+.products-menu {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.products-menu__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 500px) {
+  .products-menu__item.active {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0px;
+    left: -300px;
+    -webkit-transition: position 0.5s;
+    transition: position 0.5s;
+  }
+}
+
+.products-menu__title {
+  position: relative;
+  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 500px) {
+  .products-menu__title {
+    width: 90px;
+  }
+}
+
+.products-menu__image {
+  max-width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.products-menu__text {
+  z-index: 2;
+  font-weight: bold;
+  position: absolute;
+  bottom: 13.4444444444rem;
+  left: -10.3333333333rem;
+  color: #fff;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  font-size: 2.6666666667rem;
+  height: 3.3333333333rem;
+  width: 25.8888888889rem;
+}
+@media screen and (max-width: 500px) {
+  .products-menu__text {
+    font-size: 2.2222222222rem;
+    line-height: 2.6666666667rem;
+  }
+}
+
+.products-menu__content {
+  background: rgba(51, 53, 55, 0.9);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  width: 0;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: width 0.7s;
+  transition: width 0.7s;
+}
+@media screen and (max-width: 500px) {
+  .products-menu__content {
+    z-index: 3;
+  }
+}
+
+.products-menu__container {
+  padding: 31px 80px 38px 35px;
+}
+@media screen and (max-width: 500px) {
+  .products-menu__container {
+    padding: 30px 30px 40px;
+  }
+}
+
+.products-menu__content-text {
+  font-size: 0.8888888889rem;
+  line-height: 1.3333333333rem;
+  color: #fff;
+}
+@media screen and (max-width: 500px) {
+  .products-menu__content-text {
+    font-size: 16px;
+  }
 }
