--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -53,6 +53,12 @@ h6 {
     font-weight: normal;
 }
 
+.maincontent {
+    height: 100%;
+    transition: transform 1s;
+    will-change: transform;
+}
+
 table {
     border-collapse: collapse;
 }
