--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,7 @@ $z-fixed-menu:100;
 @import "./components/team.scss";
 @import "./components/modal.scss";
 @import "./components/video-section.scss";
+@import "./components/menu-products.scss";
 
 
 
