--- a/scss/components/hero.scss
+++ b/scss/components/hero.scss
@@ -1,7 +1,7 @@
 .hero {
     background: url("../images/bg/surfers.png") center bottom 25% / cover no-repeat;
     background-color: #1968B1;
-    height: 100vh;
+    height: 100%;
     min-height: rem(650px);
     color: #fff;
     font-weight: bold;
