--- a/scss/components/menu-products.scss
+++ b/scss/components/menu-products.scss
@@ -4,6 +4,18 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #000;
+        opacity: 50%;
+        z-index: 1;
+    }
 }
 
 .products-menu-section__title {
@@ -11,6 +23,7 @@
     color: #fff;
     width: 20%;
     margin: rem(110px) 0 0 rem(85px);
+    z-index: 2;
 
     @include tablets {
         margin: rem(198px) 0 0 rem(28px);
@@ -81,7 +94,8 @@
     position: relative;
     overflow: hidden;
     transition: width .7s;
-
+    z-index: 2;
+    
     @include phones {
         z-index: 3;
     }
